<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_design"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context=".activity.LoginActivity">

    <android.support.v7.widget.CardView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="7dp"
            app:cardElevation="22dp">


        <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:text="@string/login_screen"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:textAllCaps="true"
                android:layout_margin="15dp"
                android:textSize="20sp"/>


        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center">

            <EditText
                    android:id="@+id/email"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_username"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/username"
                    android:singleLine="true"/>

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:inputType="textPassword"
                    android:drawableStart="@drawable/lock"
                    android:singleLine="true"/>

            <Button
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:id="@+id/email_sign_in_button"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in"
                    android:textSize="15sp"
                    android:gravity="center_vertical|center"
                    android:textStyle="bold"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
